--- a/index.html
+++ b/index.html
@@ -1,25 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Weather Dashboard</title>
 </head>
+
 <body>
     <header>
-
+        <div class="col-12 my-4 p-4 text-center header">
+            <h1>Weather Dashboard</h1>
+        </div>
     </header>
+    <main class="container d-flex flex-wrap">
+        <section class = "search-field">
+            <div class = "row">
+                <div id = "search-input" class = "form-group col-12 col-lg-8 my-4 d-flex flex-column">
+                    <label class = "search-city"><h4>Search for a City:</h4></label>
+                    <input name = "search" type = "text" id = "enter-city">
+                </div>
+                <div class = "form-group col-12 col-lg-8">
+                    <button type="submit" class = "btn btn-primary mb-3 col-12">Search</button>
+                </div>
+                <div class = "form-group col-12 col-lg-8">
+                    <button type="submit" class = "clear-btn btn-primary mb-3 col-12">Clear History</button>
+                </div>
+                <div id = "search-history" class = "form-group border-top pt-4 col-12 col-lg-8 my-4"></div>
+            </div>
+        </section>
 
-    <main>
+        <section class = "weather my-5">
+            <div class = "row">
+                <div class = "col-12 p-5 weather-today border">
+                    <div class = "city-and-date d-flex flex-wrap">
+                        <h2 class = "current-city col-12 col-lg-5">City</h2>
+                        <p class = "current-date col-12 col-lg-5">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon col-6 col-lg-1"/>
+                    </div>
+                    <div class = "weather-specifics">
+                        <p>Temp: <span class = "current-temp">70</span>℉</p>
+                        <p>Wind: <span class = "current-wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "current-humidity">80</span>%</p>
+                    </div>
+                </div>
 
+                <h1>5-Day Forecast:</h1>
+                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                    <div id = "day0">
+                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
+                        <p>Temp: <span class = "temp">70</span>℉</p>
+                        <p>Wind: <span class = "wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "humidity">80</span>%</p>
+                    </div>
+                </div>
+                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                    <div id = "day1">
+                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
+                        <p>Temp: <span class = "temp">70</span>℉</p>
+                        <p>Wind: <span class = "wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "humidity">80</span>%</p>
+                    </div>
+                </div>
+                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                    <div id = "day2">
+                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
+                        <p>Temp: <span class = "temp">70</span>℉</p>
+                        <p>Wind: <span class = "wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "humidity">80</span>%</p>
+                    </div>
+                </div>
+                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                    <div id = "day3">
+                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
+                        <p>Temp: <span class = "temp">70</span>℉</p>
+                        <p>Wind: <span class = "wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "humidity">80</span>%</p>
+                    </div>
+                </div>
+                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                    <div id = "day4">
+                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
+                        <p>Temp: <span class = "temp">70</span>℉</p>
+                        <p>Wind: <span class = "wind">10.0</span>MPH</p>
+                        <p>Humidity: <span class = "humidity">80</span>%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
-    <footer>
-
-    </footer>
-    <script src="api.openweathermap.org/data/2.5/forecast?lat={lat}&lon={lon}&appid={API key}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
