--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Weather Dashboard</h1>
         </div>
     </header>
-    <main class="container d-flex flex-wrap">
+    <main class="container d-flex">
         <section class="search-field">
             <div class="row">
                 <div id="search-input" class="form-group col-12 col-lg-8 my-4 d-flex flex-column">
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <section class="weather my-5">
+        
             <div class="row">
                 <div class="col-12 p-5 weather-today border">
                     <div class="city-and-date d-flex flex-wrap">
@@ -47,47 +47,47 @@
                         <p>Humidity: <span class="current-humidity">80</span>%</p>
                     </div>
                 </div>
-
                 <h1>5-Day Forecast:</h1>
-                <div class="border col-12 col-md-4 col-lg-2 five-day">
+            <section class="five-day">
+                <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day0">
-                        <p class="date col-lg-7">mm/dd/yyyy</p>
+                        <p class="date">mm/dd/yyyy</p>
                         <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
                         <p>Temp: <span class = "temp">70</span>℉</p>
                         <p>Wind: <span class = "wind">10.0</span>MPH</p>
                         <p>Humidity: <span class = "humidity">80</span>%</p>
                     </div>
                 </div>
-                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day1">
-                        <p class="date col-lg-7">mm/dd/yyyy</p>
+                        <p class="date">mm/dd/yyyy</p>
                         <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
                         <p>Temp: <span class = "temp">70</span>℉</p>
                         <p>Wind: <span class = "wind">10.0</span>MPH</p>
                         <p>Humidity: <span class = "humidity">80</span>%</p>
                     </div>
                 </div>
-                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day2">
-                        <p class="date col-lg-7">mm/dd/yyyy</p>
+                        <p class="date">mm/dd/yyyy</p>
                         <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
                         <p>Temp: <span class = "temp">70</span>℉</p>
                         <p>Wind: <span class = "wind">10.0</span>MPH</p>
                         <p>Humidity: <span class = "humidity">80</span>%</p>
                     </div>
                 </div>
-                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day3">
-                        <p class="date col-lg-7">mm/dd/yyyy</p>
+                        <p class="date">mm/dd/yyyy</p>
                         <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
                         <p>Temp: <span class = "temp">70</span>℉</p>
                         <p>Wind: <span class = "wind">10.0</span>MPH</p>
                         <p>Humidity: <span class = "humidity">80</span>%</p>
                     </div>
                 </div>
-                <div class="border col-12 col-md-4 col-lg-2 five-day">
+                <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day4">
-                        <p class = "date col-lg-7">mm/dd/yyyy</p>
+                        <p class = "date">mm/dd/yyyy</p>
                         <img src="https://openweathermap.org/img/wn/10d.png " class="icon"/>
                         <p>Temp: <span class = "temp">70</span>℉</p>
                         <p>Wind: <span class = "wind">10.0</span>MPH</p>
