--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </header>
     <main class="container d-flex">
+        <!-- ****** Search and History box ****** -->
         <section class="search-field">
             <div class="row">
                 <div id="search-input" class="form-group col-12 col-lg-8 my-4 d-flex flex-column">
@@ -35,6 +36,7 @@
 
         
             <div class="row">
+                <!-- Displays the current day weather -->
                 <div class="col-12 p-5 weather-today border">
                     <div class="city-and-date d-flex flex-wrap">
                         <h2 class="current-city col-12 col-lg-5">City</h2>
@@ -48,6 +50,7 @@
                     </div>
                 </div>
                 <h1>5-Day Forecast:</h1>
+                <!-- Displays the weather for the next 5 days -->
             <section class="five-day">
                 <div class="border col-12 col-md-4 col-lg-2 card">
                     <div id="day0">
